add heap setting to surefire-plugin to solve OutOfMemory error during testing.