@@ -228,6 +228,8 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.17</version>
           <configuration>
+            <forkCount>1</forkCount>
+            <argLine>-Xmx1024m -XX:PermSize=96m -XX:MaxPermSize=192m</argLine>
             <includes>
               <include>**/*Test*.java</include>
               <include>**/*Test*.groovy</include>
